<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Video Encoder</string>
    <string name="welcome_message">ImageEncoder</string>
    <string name="select_images">Select Images (Max 100)</string>
    <string name="encode_video">Encode to MPEG-1 Video</string>
    <string name="load_videos">Load Videos</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
