<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Select Images Button -->
    <Button
        android:id="@+id/select_images_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_images"
        android:backgroundTint="@color/colorRed"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Encode Video Button -->
    <Button
        android:id="@+id/encode_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/encode_video"
        android:backgroundTint="@color/colorOrange"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/select_images_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Load Videos Button -->
    <Button
        android:id="@+id/load_videos_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/load_videos"
        android:backgroundTint="@color/colorBlue"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/encode_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Progress Bar -->
<!--    <ProgressBar-->
<!--        android:id="@+id/progress_bar"-->
<!--        style="?android:attr/progressBarStyleHorizontal"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:progressTint="@color/colorYellow"-->
<!--        android:max="100"-->
<!--        app:layout_constraintTop_toBottomOf="@id/load_videos_button"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_margin="16dp"-->
<!--        android:visibility="gone" />-->

    <!-- Video View -->
    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        android:background="#000000"
        android:keepScreenOn="true"
        app:layout_constraintTop_toBottomOf="@id/video_list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ListView for video files -->
    <ListView
        android:id="@+id/video_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:divider="#FFCC00"
        android:dividerHeight="2dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_videos_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
